Bug 356350 - 2.9.9 Animation Beta - Duplicating animated layers only creates new static layer
Summary: 2.9.9 Animation Beta - Duplicating animated layers only creates new static layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 2.9.9
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-07 03:26 UTC by dymoblade
Modified: 2015-12-16 21:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dymoblade 2015-12-07 03:26:44 UTC
Duplicating an animated layer, either from the duplicate button or the right click menu, creates a new layer as expected. However, the new layer is static, looks like the frame the animated layer was on, and has no animation data at all. 

On 64bit Windows 10 for reference. 

Reproducible: Always

Steps to Reproduce:
1. Create a layer.
2. Use animation tools. Create a few frames and draw on them. 
3. Use either the right click menu or duplicate button to duplicate the layer. 
4. The new layer is created, but with no animation data. 

Actual Results:  
As stated, the new layer has no animation data, and no animated frames of the old layer.

Expected Results:  
I would have expected the new layer to have all the animated frames of the old layer. 

Windows 10 64 bit, after November update 1151
Krita 2.9.9 Animation Edition beta (git 53acc68)
Comment 1 Dmitry Kazakov 2015-12-16 13:11:15 UTC
Git commit 34b7eff796385a5caf0dbfd80045235f511d5162 by Dmitry Kazakov.
Committed on 16/12/2015 at 13:11.
Pushed by dkazakov into branch 'master'.

Fix Duplicate Layer feature for animated layers
Ref T1141

M  +13   -0    krita/image/kis_keyframe_channel.cpp
M  +1    -0    krita/image/kis_keyframe_channel.h
M  +8    -1    krita/image/kis_paint_device.cc
M  +1    -1    krita/image/kis_paint_device.h
M  +14   -1    krita/image/kis_paint_layer.cc
M  +10   -0    krita/image/kis_raster_keyframe_channel.cpp
M  +1    -0    krita/image/kis_raster_keyframe_channel.h
M  +48   -0    krita/image/tests/kis_paint_device_test.cpp
M  +1    -0    krita/image/tests/kis_paint_device_test.h
M  +8    -5    krita/image/tests/kis_paint_layer_test.cpp

http://commits.kde.org/krita/34b7eff796385a5caf0dbfd80045235f511d5162
Comment 2 Dmitry Kazakov 2015-12-16 21:10:20 UTC
Git commit 719d2b4b4de041e3b769f877b7b0ef9856dbdd0a by Dmitry Kazakov.
Committed on 16/12/2015 at 19:42.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Fix Duplicate Layer feature for animated layers
Ref T1141

M  +13   -0    krita/image/kis_keyframe_channel.cpp
M  +1    -0    krita/image/kis_keyframe_channel.h
M  +8    -1    krita/image/kis_paint_device.cc
M  +1    -1    krita/image/kis_paint_device.h
M  +14   -1    krita/image/kis_paint_layer.cc
M  +10   -0    krita/image/kis_raster_keyframe_channel.cpp
M  +1    -0    krita/image/kis_raster_keyframe_channel.h
M  +48   -0    krita/image/tests/kis_paint_device_test.cpp
M  +1    -0    krita/image/tests/kis_paint_device_test.h
M  +8    -5    krita/image/tests/kis_paint_layer_test.cpp

http://commits.kde.org/calligra/719d2b4b4de041e3b769f877b7b0ef9856dbdd0a