Fix Duplicate Layer feature for animated layers

BUG:356350
Ref T1141